<resources>
    <string name="app_name">Möbius</string>

    <string name="file_provider_authority">org.itdevelopers.mobius.fileprovider</string>

    <string name="not_yet_registered">I\'m not registered yet</string>

    <!--Errores de sign up-->
    <string name="error_network">The network is\'nt available</string>

    <!--Profile-->
    <string name="text_field_dni">DNI</string>
    <string name="text_field_dni_id">Index of identification</string>
    <string name="text_field_name">Name/s</string>
    <string name="text_field_surname">Surname/s</string>
    <string name="text_field_facebook_user">Facebook User</string>
    <string name="text_field_origin_locality">Origin Locality</string>
    <string name="text_field_phone">Phone</string>
    <string name="radio_button_male">Male</string>
    <string name="radio_button_female">Female</string>

    <string name="creation_profile_birthdate_label">Birthdate</string>
    <string name="creation_profile_nationality_label">Nationality</string>
    <string name="creation_profile_gender_label">Gender</string>
    <string name="creation_profile_avatar_label">Avatar</string>

    <string name="text_field_birthdate_day_of_month">Day</string>
    <string name="text_field_birthdate_month">Month</string>
    <string name="text_field_birthdate_year">Year</string>

    <string name="select_origin_locality">Select origin locality</string>
    <string name="gps_not_enabled">It is necessary to enable GPS so that the My Location button is available</string>
    <string name="open_location_settings">Enable GPS</string>

    <string name="profile_dni_error">"DNI error"</string>
    <string name="profile_dni_id_error">"Index of identification error"</string>
    <string name="profile_name_error">"Name/s error"</string>
    <string name="profile_surname_error">"Surname/s error"</string>
    <string name="profile_facebook_user_error">"Facebook User error"</string>
    <string name="profile_origin_locality_not_selected_error">"Origin Locality not selected"</string>
    <string name="profile_birthdate_empty_fields_error">"Must type or select a date of birth"</string>
    <string name="profile_birthdate_day_of_month_error">"dd"</string>
    <string name="profile_birthdate_month_error">"mm"</string>
    <string name="profile_birthdate_year_error">"yyyy"</string>
    <string name="profile_phone_error">"Phone error"</string>
    <string name="profile_nationality_error">"None selected"</string>
    <string name="profile_gender_not_selected_error">"Gender not selected"</string>
    <string name="profile_avatar_empty_error">"You must select or capture an avatar"</string>

    <string name="add_profile_button">Add Profile</string>
    <string name="profile_label">Profile</string>
    <string name="action_save_user_profile">Save</string>

    <!--___________________________________-->


    <!--Cuenta-->
    <string name="add_account_button">Add Account</string>
    <string name="account_label">Account</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="action_save_user_account">Save</string>

    <!--Errores de cuenta-->
    <string name="email_format_error">Invalid email format</string>
    <string name="password_error">
        Unsafe password. At least 8 alphanumeric characters are required.</string>
    <string name="password_confirmation_error">Invalid password confirmation</string>
    <string name="no_data_account">No data</string>
    <string name="strong_pw">Strong password</string>
    <string name="fairly_safe_pw">Fairly safe password</string>

    <!-- Acciones Toolbar -->
    <string name="action_save_user">Save User</string>

    <!--Usuario-->
    <string name="add_user">Add User</string>
    <string name="edit_user">Edit User</string>
    <string name="add_user_account">Add Account</string>
    <string name="add_user_profile">Add Profile</string>
    <string name="edit_user_account">Edit Account</string>
    <string name="edit_user_profile">Edit Profile</string>
    <string name="empty_user_profile">The creation of a profile is required</string>
    <string name="empty_user_account">The creation of an account is required</string>
    <string name="empty_user_name">Typing a username is required</string>
    <string name="username_error">Invalid username. At least 3 characters are required.</string>

    <string name="text_field_email">Email</string>
    <string name="text_field_password">Password</string>
    <string name="text_field_confirm_password">Confirm Password</string>
    <string name="title_activity_maps">Map</string>

    <string name="creation_user_name_label">Username</string>

    <string name="message_successfully_saved_user">User saved correctly</string>

    <!--Diálogo descartar cambios-->
    <string name="title_discard_changes_dialog">Do you want to discard changes?</string>

    <!--Diálogo reconocer dni-->
    <string name="title_acknowledge_dni_dialog">DNI acknowledgement </string>
    <string name="message_acknowledge_dni_dialog">
        It is a requirement to guarantee the uniqueness of the people.
        Then you will have to verify the account.</string>

    <!--Diálogo reconocer id dni-->
    <string name="title_acknowledge_dni_id_dialog">Number of identification</string>
    <string name="message_acknowledge_dni_id_dialog">
        It is the permission that you grant us so that
        Möbius can consult the database
        National registry of people and
        Determine if your existence is real.
    </string>

    <string-array name="nationalities">
        <item>Afganistán</item>
        <item>Albania</item>
        <item>Alemania</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua y Barbuda</item>
        <item>Arabia Saudita</item>
        <item>Argelia</item>
        <item>Argentina</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaiyán</item>
        <item>Bahamas</item>
        <item>Bangladés</item>
        <item>Barbados</item>
        <item>Baréin</item>
        <item>Bélgica</item>
        <item>Belice</item>
        <item>Benín</item>
        <item>Bielorrusia</item>
        <item>Birmania</item>
        <item>Bolivia</item>
        <item>Bosnia y Herzegovina</item>
        <item>Botsuana</item>
        <item>Brasil</item>
        <item>Brunéi</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Bután</item>
        <item>Cabo Verde</item>
        <item>Camboya</item>
        <item>Camerún</item>
        <item>Canadá</item>
        <item>Catar</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Chipre</item>
        <item>Ciudad del Vaticano</item>
        <item>Colombia</item>
        <item>Comoras</item>
        <item>Corea del Norte</item>
        <item>Corea del Sur</item>
        <item>Costa de Marfil</item>
        <item>Costa Rica</item>
        <item>Croacia</item>
        <item>Cuba</item>
        <item>Dinamarca</item>
        <item>Dominica</item>
        <item>Ecuador</item>
        <item>Egipto</item>
        <item>El Salvador</item>
        <item>Emiratos Árabes Unidos</item>
        <item>Eritrea</item>
        <item>Eslovaquia</item>
        <item>Eslovenia</item>
        <item>España</item>
        <item>Estados Unidos</item>
        <item>Estonia</item>
        <item>Etiopía</item>
        <item>Filipinas</item>
        <item>Finlandia</item>
        <item>Fiyi</item>
        <item>Francia</item>
        <item>Gabón</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Ghana</item>
        <item>Granada</item>
        <item>Grecia</item>
        <item>Guatemala</item>
        <item>Guyana</item>
        <item>Guinea</item>
        <item>Guinea-Bisáu</item>
        <item>Guinea Ecuatorial</item>
        <item>Haití</item>
        <item>Honduras</item>
        <item>Hungría</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Irak</item>
        <item>Irán</item>
        <item>Irlanda</item>
        <item>Islandia</item>
        <item>Islas Marshall</item>
        <item>Islas Salomón</item>
        <item>Israel</item>
        <item>Italia</item>
        <item>Jamaica</item>
        <item>Japón</item>
        <item>Jordania</item>
        <item>Kazajistán</item>
        <item>Kenia</item>
        <item>Kirguistán</item>
        <item>Kiribati</item>
        <item>Kuwait</item>
        <item>Laos</item>
        <item>Lesoto</item>
        <item>Letonia</item>
        <item>Líbano</item>
        <item>Liberia</item>
        <item>Libia</item>
        <item>Liechtenstein</item>
        <item>Lituania</item>
        <item>Luxemburgo</item>
        <item>Madagascar</item>
        <item>Malasia</item>
        <item>Malaui</item>
        <item>Maldivas</item>
        <item>Malí</item>
        <item>Malta</item>
        <item>Marruecos</item>
        <item>Mauricio</item>
        <item>Mauritania</item>
        <item>México</item>
        <item>Micronesia</item>
        <item>Moldavia</item>
        <item>Mónaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Mozambique</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Nicaragua</item>
        <item>Níger</item>
        <item>Nigeria</item>
        <item>Noruega</item>
        <item>Nueva Zelanda</item>
        <item>Omán</item>
        <item>Países Bajos</item>
        <item>Pakistán</item>
        <item>Palaos</item>
        <item>Panamá</item>
        <item>Papúa Nueva Guinea</item>
        <item>Paraguay</item>
        <item>Perú</item>
        <item>Polonia</item>
        <item>Portugal</item>
        <item>Reino Unido de Gran Bretaña e Irlanda del Norte</item>
        <item>República Centroafricana</item>
        <item>República Checa</item>
        <item>República de Macedonia</item>
        <item>República del Congo</item>
        <item>República Democrática del Congo</item>
        <item>República Dominicana</item>
        <item>República Sudafricana</item>
        <item>Ruanda</item>
        <item>Rumanía</item>
        <item>Rusia</item>
        <item>Samoa</item>
        <item>San Cristóbal y Nieves</item>
        <item>San Marino</item>
        <item>San Vicente y las Granadinas</item>
        <item>Santa Lucía</item>
        <item>Santo Tomé y Príncipe</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leona</item>
        <item>Singapur</item>
        <item>Siria</item>
        <item>Somalia</item>
        <item>Sri Lanka</item>
        <item>Suazilandia</item>
        <item>Sudán</item>
        <item>Sudán del Sur</item>
        <item>Suecia</item>
        <item>Suiza</item>
        <item>Surinam</item>
        <item>Tailandia</item>
        <item>Tanzania</item>
        <item>Tayikistán</item>
        <item>Timor Oriental</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad y Tobago</item>
        <item>Túnez</item>
        <item>Turkmenistán</item>
        <item>Turquía</item>
        <item>Tuvalu</item>
        <item>Ucrania</item>
        <item>Uganda</item>
        <item>Uruguay</item>
        <item>Uzbekistán</item>
        <item>Vanuatu</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Yemen</item>
        <item>Yibuti</item>
        <item>Zambia</item>
        <item>Zimbabue</item>
    </string-array>
    <string name="title_activity_test_maps">Map</string>


</resources>
