<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/keyline_1"
    android:layout_marginLeft="@dimen/keyline_1"
    android:layout_marginRight="@dimen/keyline_1"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:cardElevation="8dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="@dimen/keyline_1"
    tools:context=".addedituseraccount.presentation.AddEditUserAccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Uso el theme para API<21: https://stackoverflow.com/a/47377892/5279996-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/float_label_email"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_field_email"
                android:hint="@string/text_field_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/float_label_password"
            android:layout_marginBottom="8dp"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_field_password"
                android:hint="@string/text_field_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/float_label_confirm_password"
            android:layout_marginBottom="8dp"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_field_confirm_password"
                android:hint="@string/text_field_confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>