<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="false"
    tools:context=".addedituser.presentation.AddEditUserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:clipToPadding="false">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_1"
            app:contentPadding="@dimen/keyline_1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorPrimary"/>

                <View style="@style/Divider"/>

                <!--tools namespace enables design-time features-->
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/user_profile_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    android:layout_marginBottom="@dimen/keyline_1"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    tools:listitem="@layout/user_profile_list_item"
                    tools:itemCount="1"/>

                <!--PRE: Usar el atributo theme creado para TextInputLayout-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/add_profile_button_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/keyline_1"
                    android:layout_marginLeft="@dimen/keyline_1"
                    android:layout_marginRight="@dimen/keyline_1"
                    android:theme="@style/TextLabelWhite">

                    <Button
                        android:id="@+id/add_profile_button"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingBottom="@dimen/keyline_1"
                        android:paddingTop="@dimen/keyline_1"
                        android:text="@string/add_profile_button"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_1"
            app:contentPadding="@dimen/keyline_1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/account_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorPrimary"/>

                <View style="@style/Divider"/>

                <!--tools namespace enables design-time features-->
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/user_account_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    android:layout_marginBottom="@dimen/keyline_1"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    tools:listitem="@layout/user_account_list_item"
                    tools:itemCount="1"/>

                <!--PRE: Usar el atributo theme creado para TextInputLayout-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/add_account_button_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/keyline_1"
                    android:layout_marginLeft="@dimen/keyline_1"
                    android:layout_marginRight="@dimen/keyline_1"
                    android:theme="@style/TextLabelWhite">

                    <Button
                        android:id="@+id/add_account_button"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingBottom="@dimen/keyline_1"
                        android:paddingTop="@dimen/keyline_1"
                        android:text="@string/add_account_button"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_1"
            app:contentPadding="@dimen/keyline_1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/creation_user_name_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/creation_user_name_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorPrimary"
                    />
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/float_label_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:theme="@style/TextLabelWhite"
                    app:errorEnabled="true">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/text_field_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        tools:text="itdev"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <ProgressBar
            android:id="@+id/user_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyle"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:visibility="invisible"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>